src/.yaccwork/cy.output
状態 313 conflicts: 1 shift/reduce


文法

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifier declarator declaration_list compound_statement
    6                    | declarator declaration_list compound_statement
    7                    | declaration_specifier declarator compound_statement
    8                    | declarator compound_statement

    9 declaration: declaration_specifier init_declarator_list ';'
   10            | declaration_specifier ';'

   11 declaration_list: declaration
   12                 | declaration_list declaration

   13 declaration_specifier: storage_class_specifier declaration_specifier
   14                      | storage_class_specifier
   15                      | type_specifier declaration_specifier
   16                      | type_specifier
   17                      | type_qualifier declaration_specifier
   18                      | type_qualifier

   19 type_specifier: type_specifier_keywords
   20               | struct_or_union_specifier
   21               | enum_specifier

   22 type_qualifier: type_qualifier_keywords

   23 struct_or_union_specifier: struct_or_union identifier '{' struct_declaration_list '}'
   24                          | struct_or_union '{' struct_declaration_list '}'
   25                          | struct_or_union identifier

   26 struct_declaration_list: struct_declaration
   27                        | struct_declaration_list struct_declaration

   28 init_declarator_list: init_declarator
   29                     | init_declarator_list ',' init_declarator

   30 init_declarator: declarator
   31                | declarator '=' initializer

   32 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   33 specifier_qualifier_list: type_specifier specifier_qualifier_list
   34                         | type_specifier
   35                         | type_qualifier specifier_qualifier_list
   36                         | type_qualifier

   37 struct_declarator_list: struct_declarator
   38                       | struct_declarator_list ',' struct_declarator

   39 struct_declarator: declarator
   40                  | declarator ':' constant_expression
   41                  | ':' constant_expression

   42 enum_specifier: ENUM identifier '{' enumerator_list '}'
   43               | ENUM '{' enumerator_list '}'
   44               | ENUM identifier

   45 enumerator_list: enumerator
   46                | enumerator_list ',' enumerator

   47 enumerator: identifier
   48           | identifier '=' constant_expression

   49 declarator: pointer direct_declarator
   50           | direct_declarator

   51 direct_declarator: identifier
   52                  | '(' declarator ')'
   53                  | direct_declarator '[' constant_expression ']'
   54                  | direct_declarator '[' ']'
   55                  | direct_declarator '(' parameter_type_list ')'
   56                  | direct_declarator '(' identifier_list ')'
   57                  | direct_declarator '(' ')'

   58 pointer: '*' type_qualifier_list
   59        | '*'
   60        | '*' type_qualifier_list pointer
   61        | '*' pointer

   62 type_qualifier_list: type_qualifier
   63                    | type_qualifier_list type_qualifier

   64 parameter_type_list: parameter_list
   65                    | parameter_list ',' DOTS

   66 parameter_list: parameter_declaration
   67               | parameter_list ',' parameter_declaration

   68 parameter_declaration: declaration_specifier declarator
   69                      | declaration_specifier abstract_declarator
   70                      | declaration_specifier

   71 identifier_list: identifier
   72                | identifier_list ',' identifier

   73 initializer: assignment_expression
   74            | '{' initializer_list '}'
   75            | '{' initializer_list ',' '}'

   76 initializer_list: initializer
   77                 | initializer_list ',' initializer

   78 type_name: specifier_qualifier_list abstract_declarator
   79          | specifier_qualifier_list

   80 abstract_declarator: pointer
   81                    | pointer direct_abstract_declarator
   82                    | direct_abstract_declarator

   83 direct_abstract_declarator: '(' abstract_declarator ')'
   84                           | direct_abstract_declarator '[' constant_expression ']'
   85                           | '[' constant_expression ']'
   86                           | direct_abstract_declarator '[' ']'
   87                           | '[' ']'
   88                           | direct_abstract_declarator '(' parameter_type_list ')'
   89                           | '(' parameter_type_list ')'
   90                           | direct_abstract_declarator '(' ')'
   91                           | '(' ')'

   92 statement: labeled_statement
   93          | expression_statement
   94          | compound_statement
   95          | select_statement
   96          | iteration_statement
   97          | jump_statement

   98 labeled_statement: identifier ':' statement
   99                  | CASE constant_expression ':' statement
  100                  | DEFAULT ':' statement

  101 expression_statement: expression ';'
  102                     | ';'

  103 select_statement: IF '(' expression ')' statement
  104                 | IF '(' expression ')' statement ELSE statement
  105                 | SWITCH '(' expression ')' statement

  106 iteration_statement: WHILE '(' expression ')' statement
  107                    | DO statement WHILE '(' expression ')' ';'
  108                    | FOR '(' expression ';' expression ';' expression ')' statement
  109                    | FOR '(' expression ';' expression ';' ')' statement
  110                    | FOR '(' expression ';' ';' expression ')' statement
  111                    | FOR '(' expression ';' ';' ')' statement
  112                    | FOR '(' ';' expression ';' expression ')' statement
  113                    | FOR '(' ';' expression ';' ')' statement
  114                    | FOR '(' ';' ';' expression ')' statement
  115                    | FOR '(' ';' ';' ')' statement

  116 jump_statement: GOTO identifier ';'
  117               | CONTINUE ';'
  118               | BREAK ';'
  119               | RETURN expression ';'
  120               | RETURN ';'

  121 compound_statement: '{' declaration_list statement_list '}'
  122                   | '{' declaration_list '}'
  123                   | '{' statement_list '}'
  124                   | '{' '}'

  125 statement_list: statement
  126               | statement_list statement

  127 constant_expression: conditional_expression

  128 conditional_expression: logical_or_expression
  129                       | logical_or_expression '?' expression ':' conditional_expression

  130 logical_or_expression: logical_and_expression
  131                      | logical_or_expression OR logical_and_expression

  132 logical_and_expression: inclusive_or_expression
  133                       | logical_and_expression AND inclusive_or_expression

  134 inclusive_or_expression: exclusive_or_expression
  135                        | inclusive_or_expression '|' exclusive_or_expression

  136 exclusive_or_expression: and_expression
  137                        | exclusive_or_expression '^' and_expression

  138 and_expression: equality_expression
  139               | and_expression '&' equality_expression

  140 equality_expression: relational_expression
  141                    | equality_expression EQUAL relational_expression
  142                    | equality_expression NOTEQUAL relational_expression

  143 relational_expression: shift_expression
  144                      | relational_expression GT shift_expression
  145                      | relational_expression LT shift_expression
  146                      | relational_expression GE shift_expression
  147                      | relational_expression LE shift_expression

  148 shift_expression: additive_expression
  149                 | shift_expression LSHIFT additive_expression
  150                 | shift_expression RSHIFT additive_expression

  151 additive_expression: multiplicative_expression
  152                    | additive_expression '+' multiplicative_expression
  153                    | additive_expression '-' multiplicative_expression

  154 multiplicative_expression: cast_expression
  155                          | multiplicative_expression '*' cast_expression
  156                          | multiplicative_expression '/' cast_expression
  157                          | multiplicative_expression '%' cast_expression

  158 cast_expression: unary_expression
  159                | '(' type_name ')' cast_expression

  160 unary_expression: postfix_expression
  161                 | PP unary_expression
  162                 | MM unary_expression
  163                 | unary_operator cast_expression
  164                 | SIZEOF unary_expression
  165                 | SIZEOF '(' type_name ')'

  166 unary_operator: '&'
  167               | '*'
  168               | '+'
  169               | '-'
  170               | '~'
  171               | '!'

  172 postfix_expression: primary_expression
  173                   | postfix_expression '[' expression ']'
  174                   | postfix_expression '(' ')'
  175                   | postfix_expression '(' assignment_expression_list ')'
  176                   | postfix_expression DOT identifier
  177                   | postfix_expression ARROW identifier
  178                   | postfix_expression PP
  179                   | postfix_expression MM

  180 primary_expression: identifier
  181                   | constant
  182                   | string
  183                   | '(' expression ')'

  184 constant: integer_constant
  185         | character_constant
  186         | floating_constant

  187 expression: assignment_expression
  188           | expression ',' assignment_expression

  189 assignment_expression_list: assignment_expression
  190                           | assignment_expression_list ',' assignment_expression

  191 assignment_expression: conditional_expression
  192                      | unary_expression assignment_operator assignment_expression

  193 assignment_operator: assignment_operator_keywords
  194                    | '='


出現位置の規則による終端

$end (0) 0
'!' (33) 171
'%' (37) 157
'&' (38) 139 166
'(' (40) 52 55 56 57 83 88 89 90 91 103 104 105 106 107 108 109 110
    111 112 113 114 115 159 165 174 175 183
')' (41) 52 55 56 57 83 88 89 90 91 103 104 105 106 107 108 109 110
    111 112 113 114 115 159 165 174 175 183
'*' (42) 58 59 60 61 155 167
'+' (43) 152 168
',' (44) 29 38 46 65 67 72 75 77 188 190
'-' (45) 153 169
'/' (47) 156
':' (58) 40 41 98 99 100 129
';' (59) 9 10 32 101 102 107 108 109 110 111 112 113 114 115 116 117
    118 119 120
'=' (61) 31 48 194
'?' (63) 129
'[' (91) 53 54 84 85 86 87 173
']' (93) 53 54 84 85 86 87 173
'^' (94) 137
'{' (123) 23 24 42 43 74 75 121 122 123 124
'|' (124) 135
'}' (125) 23 24 42 43 74 75 121 122 123 124
'~' (126) 170
error (256)
storage_class_specifier (258) 13 14
type_specifier_keywords (259) 19
type_qualifier_keywords (260) 22
struct_or_union (261) 23 24 25
assignment_operator_keywords (262) 193
ENUM (263) 42 43 44
IF (264) 103 104
ELSE (265) 104
SWITCH (266) 105
DO (267) 107
FOR (268) 108 109 110 111 112 113 114 115
CASE (269) 99
WHILE (270) 106 107
GOTO (271) 116
CONTINUE (272) 117
BREAK (273) 118
RETURN (274) 119 120
DEFAULT (275) 100
SIZEOF (276) 164 165
DOTS (277) 65
DOT (278) 176
GT (279) 144
LT (280) 145
GE (281) 146
LE (282) 147
PP (283) 161 178
MM (284) 162 179
ARROW (285) 177
OR (286) 131
AND (287) 133
EQUAL (288) 141
NOTEQUAL (289) 142
LSHIFT (290) 149
RSHIFT (291) 150
string (292) 182
identifier (293) 23 25 42 44 47 48 51 71 72 98 116 176 177 180
integer_constant (294) 184
character_constant (295) 185
floating_constant (296) 186


出現位置の規則による非終端

$accept (63)
    左辺: 0
translation_unit (64)
    左辺: 1 2, 右辺: 0 2
external_declaration (65)
    左辺: 3 4, 右辺: 1 2
function_definition (66)
    左辺: 5 6 7 8, 右辺: 3
declaration (67)
    左辺: 9 10, 右辺: 4 11 12
declaration_list (68)
    左辺: 11 12, 右辺: 5 6 12 121 122
declaration_specifier (69)
    左辺: 13 14 15 16 17 18, 右辺: 5 7 9 10 13 15 17 68 69 70
type_specifier (70)
    左辺: 19 20 21, 右辺: 15 16 33 34
type_qualifier (71)
    左辺: 22, 右辺: 17 18 35 36 62 63
struct_or_union_specifier (72)
    左辺: 23 24 25, 右辺: 20
struct_declaration_list (73)
    左辺: 26 27, 右辺: 23 24 27
init_declarator_list (74)
    左辺: 28 29, 右辺: 9 29
init_declarator (75)
    左辺: 30 31, 右辺: 28 29
struct_declaration (76)
    左辺: 32, 右辺: 26 27
specifier_qualifier_list (77)
    左辺: 33 34 35 36, 右辺: 32 33 35 78 79
struct_declarator_list (78)
    左辺: 37 38, 右辺: 32 38
struct_declarator (79)
    左辺: 39 40 41, 右辺: 37 38
enum_specifier (80)
    左辺: 42 43 44, 右辺: 21
enumerator_list (81)
    左辺: 45 46, 右辺: 42 43 46
enumerator (82)
    左辺: 47 48, 右辺: 45 46
declarator (83)
    左辺: 49 50, 右辺: 5 6 7 8 30 31 39 40 52 68
direct_declarator (84)
    左辺: 51 52 53 54 55 56 57, 右辺: 49 50 53 54 55 56 57
pointer (85)
    左辺: 58 59 60 61, 右辺: 49 60 61 80 81
type_qualifier_list (86)
    左辺: 62 63, 右辺: 58 60 63
parameter_type_list (87)
    左辺: 64 65, 右辺: 55 88 89
parameter_list (88)
    左辺: 66 67, 右辺: 64 65 67
parameter_declaration (89)
    左辺: 68 69 70, 右辺: 66 67
identifier_list (90)
    左辺: 71 72, 右辺: 56 72
initializer (91)
    左辺: 73 74 75, 右辺: 31 76 77
initializer_list (92)
    左辺: 76 77, 右辺: 74 75 77
type_name (93)
    左辺: 78 79, 右辺: 159 165
abstract_declarator (94)
    左辺: 80 81 82, 右辺: 69 78 83
direct_abstract_declarator (95)
    左辺: 83 84 85 86 87 88 89 90 91, 右辺: 81 82 84 86 88 90
statement (96)
    左辺: 92 93 94 95 96 97, 右辺: 98 99 100 103 104 105 106 107
    108 109 110 111 112 113 114 115 125 126
labeled_statement (97)
    左辺: 98 99 100, 右辺: 92
expression_statement (98)
    左辺: 101 102, 右辺: 93
select_statement (99)
    左辺: 103 104 105, 右辺: 95
iteration_statement (100)
    左辺: 106 107 108 109 110 111 112 113 114 115, 右辺: 96
jump_statement (101)
    左辺: 116 117 118 119 120, 右辺: 97
compound_statement (102)
    左辺: 121 122 123 124, 右辺: 5 6 7 8 94
statement_list (103)
    左辺: 125 126, 右辺: 121 123 126
constant_expression (104)
    左辺: 127, 右辺: 40 41 48 53 84 85 99
conditional_expression (105)
    左辺: 128 129, 右辺: 127 129 191
logical_or_expression (106)
    左辺: 130 131, 右辺: 128 129 131
logical_and_expression (107)
    左辺: 132 133, 右辺: 130 131 133
inclusive_or_expression (108)
    左辺: 134 135, 右辺: 132 133 135
exclusive_or_expression (109)
    左辺: 136 137, 右辺: 134 135 137
and_expression (110)
    左辺: 138 139, 右辺: 136 137 139
equality_expression (111)
    左辺: 140 141 142, 右辺: 138 139 141 142
relational_expression (112)
    左辺: 143 144 145 146 147, 右辺: 140 141 142 144 145 146 147
shift_expression (113)
    左辺: 148 149 150, 右辺: 143 144 145 146 147 149 150
additive_expression (114)
    左辺: 151 152 153, 右辺: 148 149 150 152 153
multiplicative_expression (115)
    左辺: 154 155 156 157, 右辺: 151 152 153 155 156 157
cast_expression (116)
    左辺: 158 159, 右辺: 154 155 156 157 159 163
unary_expression (117)
    左辺: 160 161 162 163 164 165, 右辺: 158 161 162 164 192
unary_operator (118)
    左辺: 166 167 168 169 170 171, 右辺: 163
postfix_expression (119)
    左辺: 172 173 174 175 176 177 178 179, 右辺: 160 173 174 175
    176 177 178 179
primary_expression (120)
    左辺: 180 181 182 183, 右辺: 172
constant (121)
    左辺: 184 185 186, 右辺: 181
expression (122)
    左辺: 187 188, 右辺: 101 103 104 105 106 107 108 109 110 111
    112 113 114 119 129 173 183 188
assignment_expression_list (123)
    左辺: 189 190, 右辺: 175 190
assignment_expression (124)
    左辺: 191 192, 右辺: 73 187 188 189 190 192
assignment_operator (125)
    左辺: 193 194, 右辺: 192


State 0

    0 $accept: . translation_unit $end

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    identifier               shift, and go to state 6
    '*'                      shift, and go to state 7
    '('                      shift, and go to state 8

    translation_unit           go to state 9
    external_declaration       go to state 10
    function_definition        go to state 11
    declaration                go to state 12
    declaration_specifier      go to state 13
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17
    declarator                 go to state 18
    direct_declarator          go to state 19
    pointer                    go to state 20


State 1

   13 declaration_specifier: storage_class_specifier . declaration_specifier
   14                      | storage_class_specifier .

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5

    $default  reduce using rule 14 (declaration_specifier)

    declaration_specifier      go to state 21
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17


State 2

   19 type_specifier: type_specifier_keywords .

    $default  reduce using rule 19 (type_specifier)


State 3

   22 type_qualifier: type_qualifier_keywords .

    $default  reduce using rule 22 (type_qualifier)


State 4

   23 struct_or_union_specifier: struct_or_union . identifier '{' struct_declaration_list '}'
   24                          | struct_or_union . '{' struct_declaration_list '}'
   25                          | struct_or_union . identifier

    identifier  shift, and go to state 22
    '{'         shift, and go to state 23


State 5

   42 enum_specifier: ENUM . identifier '{' enumerator_list '}'
   43               | ENUM . '{' enumerator_list '}'
   44               | ENUM . identifier

    identifier  shift, and go to state 24
    '{'         shift, and go to state 25


State 6

   51 direct_declarator: identifier .

    $default  reduce using rule 51 (direct_declarator)


State 7

   58 pointer: '*' . type_qualifier_list
   59        | '*' .
   60        | '*' . type_qualifier_list pointer
   61        | '*' . pointer

    type_qualifier_keywords  shift, and go to state 3
    '*'                      shift, and go to state 7

    $default  reduce using rule 59 (pointer)

    type_qualifier       go to state 26
    pointer              go to state 27
    type_qualifier_list  go to state 28


State 8

   52 direct_declarator: '(' . declarator ')'

    identifier  shift, and go to state 6
    '*'         shift, and go to state 7
    '('         shift, and go to state 8

    declarator         go to state 29
    direct_declarator  go to state 19
    pointer            go to state 20


State 9

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end                     shift, and go to state 30
    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    identifier               shift, and go to state 6
    '*'                      shift, and go to state 7
    '('                      shift, and go to state 8

    external_declaration       go to state 31
    function_definition        go to state 11
    declaration                go to state 12
    declaration_specifier      go to state 13
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17
    declarator                 go to state 18
    direct_declarator          go to state 19
    pointer                    go to state 20


State 10

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 11

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 12

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 13

    5 function_definition: declaration_specifier . declarator declaration_list compound_statement
    7                    | declaration_specifier . declarator compound_statement
    9 declaration: declaration_specifier . init_declarator_list ';'
   10            | declaration_specifier . ';'

    identifier  shift, and go to state 6
    '*'         shift, and go to state 7
    ';'         shift, and go to state 32
    '('         shift, and go to state 8

    init_declarator_list  go to state 33
    init_declarator       go to state 34
    declarator            go to state 35
    direct_declarator     go to state 19
    pointer               go to state 20


State 14

   15 declaration_specifier: type_specifier . declaration_specifier
   16                      | type_specifier .

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5

    $default  reduce using rule 16 (declaration_specifier)

    declaration_specifier      go to state 36
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17


State 15

   17 declaration_specifier: type_qualifier . declaration_specifier
   18                      | type_qualifier .

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5

    $default  reduce using rule 18 (declaration_specifier)

    declaration_specifier      go to state 37
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17


State 16

   20 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 20 (type_specifier)


State 17

   21 type_specifier: enum_specifier .

    $default  reduce using rule 21 (type_specifier)


State 18

    6 function_definition: declarator . declaration_list compound_statement
    8                    | declarator . compound_statement

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    '{'                      shift, and go to state 38

    declaration                go to state 39
    declaration_list           go to state 40
    declaration_specifier      go to state 41
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17
    compound_statement         go to state 42


State 19

   50 declarator: direct_declarator .
   53 direct_declarator: direct_declarator . '[' constant_expression ']'
   54                  | direct_declarator . '[' ']'
   55                  | direct_declarator . '(' parameter_type_list ')'
   56                  | direct_declarator . '(' identifier_list ')'
   57                  | direct_declarator . '(' ')'

    '('  shift, and go to state 43
    '['  shift, and go to state 44

    $default  reduce using rule 50 (declarator)


State 20

   49 declarator: pointer . direct_declarator

    identifier  shift, and go to state 6
    '('         shift, and go to state 8

    direct_declarator  go to state 45


State 21

   13 declaration_specifier: storage_class_specifier declaration_specifier .

    $default  reduce using rule 13 (declaration_specifier)


State 22

   23 struct_or_union_specifier: struct_or_union identifier . '{' struct_declaration_list '}'
   25                          | struct_or_union identifier .

    '{'  shift, and go to state 46

    $default  reduce using rule 25 (struct_or_union_specifier)


State 23

   24 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5

    type_specifier             go to state 47
    type_qualifier             go to state 48
    struct_or_union_specifier  go to state 16
    struct_declaration_list    go to state 49
    struct_declaration         go to state 50
    specifier_qualifier_list   go to state 51
    enum_specifier             go to state 17


State 24

   42 enum_specifier: ENUM identifier . '{' enumerator_list '}'
   44               | ENUM identifier .

    '{'  shift, and go to state 52

    $default  reduce using rule 44 (enum_specifier)


State 25

   43 enum_specifier: ENUM '{' . enumerator_list '}'

    identifier  shift, and go to state 53

    enumerator_list  go to state 54
    enumerator       go to state 55


State 26

   62 type_qualifier_list: type_qualifier .

    $default  reduce using rule 62 (type_qualifier_list)


State 27

   61 pointer: '*' pointer .

    $default  reduce using rule 61 (pointer)


State 28

   58 pointer: '*' type_qualifier_list .
   60        | '*' type_qualifier_list . pointer
   63 type_qualifier_list: type_qualifier_list . type_qualifier

    type_qualifier_keywords  shift, and go to state 3
    '*'                      shift, and go to state 7

    $default  reduce using rule 58 (pointer)

    type_qualifier  go to state 56
    pointer         go to state 57


State 29

   52 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 58


State 30

    0 $accept: translation_unit $end .

    $default  accept


State 31

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 32

   10 declaration: declaration_specifier ';' .

    $default  reduce using rule 10 (declaration)


State 33

    9 declaration: declaration_specifier init_declarator_list . ';'
   29 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 59
    ','  shift, and go to state 60


State 34

   28 init_declarator_list: init_declarator .

    $default  reduce using rule 28 (init_declarator_list)


State 35

    5 function_definition: declaration_specifier declarator . declaration_list compound_statement
    7                    | declaration_specifier declarator . compound_statement
   30 init_declarator: declarator .
   31                | declarator . '=' initializer

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    '{'                      shift, and go to state 38
    '='                      shift, and go to state 61

    $default  reduce using rule 30 (init_declarator)

    declaration                go to state 39
    declaration_list           go to state 62
    declaration_specifier      go to state 41
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17
    compound_statement         go to state 63


State 36

   15 declaration_specifier: type_specifier declaration_specifier .

    $default  reduce using rule 15 (declaration_specifier)


State 37

   17 declaration_specifier: type_qualifier declaration_specifier .

    $default  reduce using rule 17 (declaration_specifier)


State 38

  121 compound_statement: '{' . declaration_list statement_list '}'
  122                   | '{' . declaration_list '}'
  123                   | '{' . statement_list '}'
  124                   | '{' . '}'

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    IF                       shift, and go to state 64
    SWITCH                   shift, and go to state 65
    DO                       shift, and go to state 66
    FOR                      shift, and go to state 67
    CASE                     shift, and go to state 68
    WHILE                    shift, and go to state 69
    GOTO                     shift, and go to state 70
    CONTINUE                 shift, and go to state 71
    BREAK                    shift, and go to state 72
    RETURN                   shift, and go to state 73
    DEFAULT                  shift, and go to state 74
    SIZEOF                   shift, and go to state 75
    PP                       shift, and go to state 76
    MM                       shift, and go to state 77
    string                   shift, and go to state 78
    identifier               shift, and go to state 79
    integer_constant         shift, and go to state 80
    character_constant       shift, and go to state 81
    floating_constant        shift, and go to state 82
    '*'                      shift, and go to state 83
    ';'                      shift, and go to state 84
    '{'                      shift, and go to state 38
    '}'                      shift, and go to state 85
    '('                      shift, and go to state 86
    '&'                      shift, and go to state 87
    '+'                      shift, and go to state 88
    '-'                      shift, and go to state 89
    '~'                      shift, and go to state 90
    '!'                      shift, and go to state 91

    declaration                go to state 39
    declaration_list           go to state 92
    declaration_specifier      go to state 41
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17
    statement                  go to state 93
    labeled_statement          go to state 94
    expression_statement       go to state 95
    select_statement           go to state 96
    iteration_statement        go to state 97
    jump_statement             go to state 98
    compound_statement         go to state 99
    statement_list             go to state 100
    conditional_expression     go to state 101
    logical_or_expression      go to state 102
    logical_and_expression     go to state 103
    inclusive_or_expression    go to state 104
    exclusive_or_expression    go to state 105
    and_expression             go to state 106
    equality_expression        go to state 107
    relational_expression      go to state 108
    shift_expression           go to state 109
    additive_expression        go to state 110
    multiplicative_expression  go to state 111
    cast_expression            go to state 112
    unary_expression           go to state 113
    unary_operator             go to state 114
    postfix_expression         go to state 115
    primary_expression         go to state 116
    constant                   go to state 117
    expression                 go to state 118
    assignment_expression      go to state 119


State 39

   11 declaration_list: declaration .

    $default  reduce using rule 11 (declaration_list)


State 40

    6 function_definition: declarator declaration_list . compound_statement
   12 declaration_list: declaration_list . declaration

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    '{'                      shift, and go to state 38

    declaration                go to state 120
    declaration_specifier      go to state 41
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17
    compound_statement         go to state 121


State 41

    9 declaration: declaration_specifier . init_declarator_list ';'
   10            | declaration_specifier . ';'

    identifier  shift, and go to state 6
    '*'         shift, and go to state 7
    ';'         shift, and go to state 32
    '('         shift, and go to state 8

    init_declarator_list  go to state 33
    init_declarator       go to state 34
    declarator            go to state 122
    direct_declarator     go to state 19
    pointer               go to state 20


State 42

    8 function_definition: declarator compound_statement .

    $default  reduce using rule 8 (function_definition)


State 43

   55 direct_declarator: direct_declarator '(' . parameter_type_list ')'
   56                  | direct_declarator '(' . identifier_list ')'
   57                  | direct_declarator '(' . ')'

    storage_class_specifier  shift, and go to state 1
    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    identifier               shift, and go to state 123
    ')'                      shift, and go to state 124

    declaration_specifier      go to state 125
    type_specifier             go to state 14
    type_qualifier             go to state 15
    struct_or_union_specifier  go to state 16
    enum_specifier             go to state 17
    parameter_type_list        go to state 126
    parameter_list             go to state 127
    parameter_declaration      go to state 128
    identifier_list            go to state 129


State 44

   53 direct_declarator: direct_declarator '[' . constant_expression ']'
   54                  | direct_declarator '[' . ']'

    SIZEOF              shift, and go to state 75
    PP                  shift, and go to state 76
    MM                  shift, and go to state 77
    string              shift, and go to state 78
    identifier          shift, and go to state 130
    integer_constant    shift, and go to state 80
    character_constant  shift, and go to state 81
    floating_constant   shift, and go to state 82
    '*'                 shift, and go to state 83
    '('                 shift, and go to state 86
    ']'                 shift, and go to state 131
    '&'                 shift, and go to state 87
    '+'                 shift, and go to state 88
    '-'                 shift, and go to state 89
    '~'                 shift, and go to state 90
    '!'                 shift, and go to state 91

    constant_expression        go to state 132
    conditional_expression     go to state 133
    logical_or_expression      go to state 102
    logical_and_expression     go to state 103
    inclusive_or_expression    go to state 104
    exclusive_or_expression    go to state 105
    and_expression             go to state 106
    equality_expression        go to state 107
    relational_expression      go to state 108
    shift_expression           go to state 109
    additive_expression        go to state 110
    multiplicative_expression  go to state 111
    cast_expression            go to state 112
    unary_expression           go to state 134
    unary_operator             go to state 114
    postfix_expression         go to state 115
    primary_expression         go to state 116
    constant                   go to state 117


State 45

   49 declarator: pointer direct_declarator .
   53 direct_declarator: direct_declarator . '[' constant_expression ']'
   54                  | direct_declarator . '[' ']'
   55                  | direct_declarator . '(' parameter_type_list ')'
   56                  | direct_declarator . '(' identifier_list ')'
   57                  | direct_declarator . '(' ')'

    '('  shift, and go to state 43
    '['  shift, and go to state 44

    $default  reduce using rule 49 (declarator)


State 46

   23 struct_or_union_specifier: struct_or_union identifier '{' . struct_declaration_list '}'

    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5

    type_specifier             go to state 47
    type_qualifier             go to state 48
    struct_or_union_specifier  go to state 16
    struct_declaration_list    go to state 135
    struct_declaration         go to state 50
    specifier_qualifier_list   go to state 51
    enum_specifier             go to state 17


State 47

   33 specifier_qualifier_list: type_specifier . specifier_qualifier_list
   34                         | type_specifier .

    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5

    $default  reduce using rule 34 (specifier_qualifier_list)

    type_specifier             go to state 47
    type_qualifier             go to state 48
    struct_or_union_specifier  go to state 16
    specifier_qualifier_list   go to state 136
    enum_specifier             go to state 17


State 48

   35 specifier_qualifier_list: type_qualifier . specifier_qualifier_list
   36                         | type_qualifier .

    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5

    $default  reduce using rule 36 (specifier_qualifier_list)

    type_specifier             go to state 47
    type_qualifier             go to state 48
    struct_or_union_specifier  go to state 16
    specifier_qualifier_list   go to state 137
    enum_specifier             go to state 17


State 49

   24 struct_or_union_specifier: struct_or_union '{' struct_declaration_list . '}'
   27 struct_declaration_list: struct_declaration_list . struct_declaration

    type_specifier_keywords  shift, and go to state 2
    type_qualifier_keywords  shift, and go to state 3
    struct_or_union          shift, and go to state 4
    ENUM                     shift, and go to state 5
    '}'                      shift, and go to state 138

    type_specifier             go to state 47
    type_qualifier             go to state 48
    struct_or_union_specifier  go to state 16
    struct_declaration         go to state 139
    specifier_qualifier_list   go to state 51
    enum_specifier             go to state 17


State 50

   26 struct_declaration_list: struct_declaration .

    $default  reduce using rule 26 (struct_declaration_list)


State 51

   32 struct_declaration: specifier_qualifier_list . struct_declarator_list ';'

    identifier  shift, and go to state 6
    '*'         shift, and go to state 7
    ':'         shift, and go to state 140
    '('         shift, and go to state 8
